feat: update Java version to 17 and adjust compilation scripts accordingly